# anerley

./: .anjuta_sym_db.db  CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure
.anjuta/session/: anjuta.session  dock-layout.xml
anerley/: CMakeLists.txt  Makefile.in  anerley-ebook-feed.c  anerley-ebook-feed.c~  anerley-ebook-feed.h  anerley-econtact-item.h  anerley-marshals.c  anerley-marshals.h
autom4te.cache/: output.0  requests  traces.0
data/: Makefile.in
src/: CMakeLists.txt  Makefile.in  sw-marshals.c  sw-marshals.h
tests/: Makefile.am~  Makefile.in  test-simple-ui.c
